--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 .leaflet-container {
   width: 100%;
-  height: 100vh;
+  height: 80vh;
+}
+
+;
+
+.leaflet-tile {
+  filter: hue-rotate(180deg)
 }
 
 ;
